Added link to blog

--- a/main.tex
+++ b/main.tex
@@ -92,6 +92,8 @@ Van Note A, Quitadamo A, Piemonte A, Ramsdell J, Cocchiola A, Okamoto K, Thomas 
 
 \section{\sc Social Media}
 
+Professional Blog: \href{https://andrewquitadamo.github.io/blog}{andrewquitadamo.github.io/blog}
+
 Github: \href{https://github.com/andrewquitadamo}{github.com/andrewquitadamo}
 
 Twitter: \href{https://twitter.com/andrewquitadamo}{@andrewquitadamo}
