Updated tex source of resume

--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,8 @@ Supervised BMCB 755 - Laboratory in Biochemistry and Molecular Biology
 Tutored small groups of students in introductory undergraduate physics.
 
 \section{\sc Publications}
+Tian L, Quitadamo A, Lin F, Shi X. "Methods for Population Based eQTL Analysis in Human Genetics". Tsinghua Science and Technology, 2014. 19(6): 624-634.
+
 Quitadamo A, Tian L, Shi X. “A Network Approach for Integrative Analysis of Genomic Data in Ovarian Cancer”. Poster, Presented at: Intelligent Systems for Molecular Biology: 2014 July 13-15; Boston MA.
 
 Quitadamo A, Lin F, Tian L, and Shi X. "A microRNA-Gene Network in Ovarian Cancer from Genome-Wide QTL Analysis". The 10th International Symposium on Bioinformatics Research and Applications (ISBRA2014), Zhangjiajie, China, June 28-30, 2014.
@@ -93,6 +95,8 @@ Van Note A, Quitadamo A, Piemonte A, Ramsdell J, Cocchiola A, Okamoto K, Thomas 
 \section{\sc Social Media}
 
 Professional Blog: \href{https://andrewquitadamo.github.io/blog}{andrewquitadamo.github.io/blog}
+
+LinkedIn: \href{http://linkedin.com/in/andrewquitadamo}{linkedin.com/in/andrewquitadamo}
 
 Github: \href{https://github.com/andrewquitadamo}{github.com/andrewquitadamo}
 
