Added BOG Poster and new paper

--- a/main.tex
+++ b/main.tex
@@ -65,17 +65,21 @@ Developing network models of gene interactions, and eQTL analyses in cancer.
 
 %\vspace{-.1cm}
 {\em Janies Lab} \hfill {\bf August 2013 - December 2013}\\
-Created a phylogeny of Phlebotominae sandflies from multiple genetic markers.    
+Created a phylogenetic tree of Phlebotominae sandflies using multiple genetic markers.    
 \hspace*{.05in} 
 
 {\bf University of New Hampshire}\\
 %\vspace{-.3cm}
 %\vspace{-.1cm}
 {\em Thomas Lab} \hfill {\bf June 2012 - June 2013}\\
-Undergraduate research assistant, studied DNA in {\em C. elegans}.\\ 
+Undergraduate research assistant, studied DNA methylation in {\em C. elegans}.\\ 
 
 
 \section{\sc Teaching Experience}
+
+{\em Teaching Assistant} \hfill {\bf January 2015-May 2015}\\
+BINF 6112/8112 - Bioinformatics Programming II\\
+Taught lab section of Python programming
 
 {\em Undergraduate Teaching Assistant} \hfill {\bf January 2013-May 2013}\\
 Supervised BMCB 755 - Laboratory in Biochemistry and Molecular Biology
@@ -84,9 +88,13 @@ Supervised BMCB 755 - Laboratory in Biochemistry and Molecular Biology
 Tutored small groups of students in introductory undergraduate physics.
 
 \section{\sc Publications}
+Hall B, Quitadamo A, Shi X. "A Network Ensemble of microRNA and Gene Expression in Ovarian Cancer". Poster, Presented at: Biology of Genomes: 2015 May 5-9; Cold Spring Harbor Laboratory. 
+
+Quitadamo A, Tian L, Hall B, Shi X. "An Integrated Network of microRNA and Gene Expression in Ovarian Cancer". BMC Bioinformatics 2015, 16(Suppl 5):S5.
+
 Tian L, Quitadamo A, Lin F, Shi X. "Methods for Population Based eQTL Analysis in Human Genetics". Tsinghua Science and Technology, 2014. 19(6): 624-634.
 
-Quitadamo A, Tian L, Shi X. “A Network Approach for Integrative Analysis of Genomic Data in Ovarian Cancer”. Poster, Presented at: Intelligent Systems for Molecular Biology: 2014 July 13-15; Boston MA.
+Quitadamo A, Tian L, Shi X. "A Network Approach for Integrative Analysis of Genomic Data in Ovarian Cancer". Poster, Presented at: Intelligent Systems for Molecular Biology: 2014 July 13-15; Boston MA.
 
 Quitadamo A, Lin F, Tian L, and Shi X. "A microRNA-Gene Network in Ovarian Cancer from Genome-Wide QTL Analysis". The 10th International Symposium on Bioinformatics Research and Applications (ISBRA2014), Zhangjiajie, China, June 28-30, 2014.
 
