Added ACMG posters

--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,10 @@ Tutored small groups of students in introductory undergraduate physics.
 
 \section{\sc Publications}
 
+Quitadamo A, Desai H, and Shi X. "Network Driven Analysis of eQTLs in Lung Adenocarcinoma Subtypes". Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
+
+Hall B, Quitadamo A, and Shi X. "An Integrative Network Mining Approach in Colorectal Cancer". Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
+
 Sudmant PH, Rausch T, Gardner EJ, Handsaker RE, Abyzov A, Huddleston J, Zhang Y, Ye K, Jun G, Fritz M, Konkel MK, Malhotra A, Stütz AM, Shi X, Casale FP, Chen J, Hormozdiari F, Dayama G, Chen K, Malig M, Chaisson M, Walter K, Meiers S, Kashin S, Garrison E, Auton A, Lam H, Mu XJ, Alkan C, Antaki D, Bae T, Chines P, Chong Z, Clarke L, Dal E, Ding L, Emery S, Fan X, Gujral M, Kahveci F, Kidd JM, Kong Y, Lameijer E-W, McCarthy S, Flicek P, Gibbs RA, Marth G, Menelaou A, Muzny DM, Nelson BJ, Noor A, Parrish NF, Quitadamo A, Raeder B, Schadt E, Schlattl A, Shabalin AA, Untergasser A, Walker JA, Wang M, Yu Y, Zhang C, Zhang J, Zheng-Bradley X, Zhou W, Zichner T, Sebat J, Batzer MA, McCarroll SA, The 1000 Genomes Project Consortium, Mills RE, Gerstein MB, Bashir A, Stegle O, Devine SE, Lee C, Eichler EE, Korbel JO. “An integrated map of structural variation in 2,504 human genomes”. Nature 2015. 562: 75-81. doi:10.1038/nature15394
 
 The 1000 Genomes Project Consortium. "A Global Reference for Human Genetic Variation". Nature 2015. 562: 68-74. doi:10.1038/nature15393
