--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,10 @@ Undergraduate research assistant, studied DNA methylation in {\em C. elegans}.\\
 
 \section{\sc Teaching Experience}
 
+{\em Teaching Assistant} \hfill {\bf January 2016-May 2016}\\
+BINF 6112/8112 - Bioinformatics Programming II\\
+Taught lab section of Python programming and guest lectured
+
 {\em Teaching Assistant} \hfill {\bf January 2015-May 2015}\\
 BINF 6112/8112 - Bioinformatics Programming II\\
 Taught lab section of Python programming
