--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@ aquitada@uncc.edu\\
 
 \section{\sc Honors and Awards} 
 
-GAANN Fellowship 2016j
+GAANN Fellowship 2016
 
 University Scholar 2012, 2013
 
@@ -96,30 +96,30 @@ Tutored small groups of students in introductory undergraduate physics.
 
 \section{\sc Publications}
 
-Quitadamo A, Desai H, and Shi X. "Network Driven Analysis of eQTLs in Lung Adenocarcinoma Subtypes". Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
+Quitadamo A, Desai H, and Shi X. ``Network Driven Analysis of eQTLs in Lung Adenocarcinoma Subtypes''. Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
 
-Hall B, Quitadamo A, and Shi X. "An Integrative Network Mining Approach in Colorectal Cancer". Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
+Hall B, Quitadamo A, and Shi X. ``An Integrative Network Mining Approach in Colorectal Cancer''. Poster, Presented at: ACMG Clinical Genetics Meeting: 2016, March 8-12; Tampa FL.
 
-Sudmant PH, Rausch T, Gardner EJ, Handsaker RE, Abyzov A, Huddleston J, Zhang Y, Ye K, Jun G, Fritz M, Konkel MK, Malhotra A, Stütz AM, Shi X, Casale FP, Chen J, Hormozdiari F, Dayama G, Chen K, Malig M, Chaisson M, Walter K, Meiers S, Kashin S, Garrison E, Auton A, Lam H, Mu XJ, Alkan C, Antaki D, Bae T, Chines P, Chong Z, Clarke L, Dal E, Ding L, Emery S, Fan X, Gujral M, Kahveci F, Kidd JM, Kong Y, Lameijer E-W, McCarthy S, Flicek P, Gibbs RA, Marth G, Menelaou A, Muzny DM, Nelson BJ, Noor A, Parrish NF, Quitadamo A, Raeder B, Schadt E, Schlattl A, Shabalin AA, Untergasser A, Walker JA, Wang M, Yu Y, Zhang C, Zhang J, Zheng-Bradley X, Zhou W, Zichner T, Sebat J, Batzer MA, McCarroll SA, The 1000 Genomes Project Consortium, Mills RE, Gerstein MB, Bashir A, Stegle O, Devine SE, Lee C, Eichler EE, Korbel JO. “An integrated map of structural variation in 2,504 human genomes”. Nature 2015. 562: 75-81. doi:10.1038/nature15394
+Sudmant PH, Rausch T, Gardner EJ, Handsaker RE, Abyzov A, Huddleston J, Zhang Y, Ye K, Jun G, Fritz M, Konkel MK, Malhotra A, Stütz AM, Shi X, Casale FP, Chen J, Hormozdiari F, Dayama G, Chen K, Malig M, Chaisson M, Walter K, Meiers S, Kashin S, Garrison E, Auton A, Lam H, Mu XJ, Alkan C, Antaki D, Bae T, Chines P, Chong Z, Clarke L, Dal E, Ding L, Emery S, Fan X, Gujral M, Kahveci F, Kidd JM, Kong Y, Lameijer E-W, McCarthy S, Flicek P, Gibbs RA, Marth G, Menelaou A, Muzny DM, Nelson BJ, Noor A, Parrish NF, Quitadamo A, Raeder B, Schadt E, Schlattl A, Shabalin AA, Untergasser A, Walker JA, Wang M, Yu Y, Zhang C, Zhang J, Zheng-Bradley X, Zhou W, Zichner T, Sebat J, Batzer MA, McCarroll SA, The 1000 Genomes Project Consortium, Mills RE, Gerstein MB, Bashir A, Stegle O, Devine SE, Lee C, Eichler EE, Korbel JO. ``An integrated map of structural variation in 2,504 human genomes''. Nature 2015. 562: 75-81. doi:10.1038/nature15394
 
-The 1000 Genomes Project Consortium. "A Global Reference for Human Genetic Variation". Nature 2015. 562: 68-74. doi:10.1038/nature15393
+The 1000 Genomes Project Consortium. ``A Global Reference for Human Genetic Variation''. Nature 2015. 562: 68-74. doi:10.1038/nature15393
 
-Grace-Lema DM, Yared S, Quitadamo A, Janies DA, Wheeler WC, Balkew M, Hailu A, Warburg A, Clouse RM. "A phylogeny of sand flies (Diptera: Psychodidae: Phlebotominae), using recent Ethiopian collections and a broad selection of publicly available DNA sequence data". Systematic Entomology 2015, 40(4): 733-744. doi:10.1111/syen.12135
+Grace-Lema DM, Yared S, Quitadamo A, Janies DA, Wheeler WC, Balkew M, Hailu A, Warburg A, Clouse RM. ``A phylogeny of sand flies (Diptera: Psychodidae: Phlebotominae), using recent Ethiopian collections and a broad selection of publicly available DNA sequence data''. Systematic Entomology 2015, 40(4): 733-744. doi:10.1111/syen.12135
 
-B Hall, A Quitadamo, X Shi. "A Graph Community Approach for Constructing microRNA Networks". Big Data Computing and Communications, 283-293. doi:10.1007/978-3-319-22047-5\_23
+B Hall, A Quitadamo, X Shi. ``A Graph Community Approach for Constructing microRNA Networks''. Big Data Computing and Communications, 283-293. doi:10.1007/978-3-319-22047-5\_23
 
 
-Hall B, Quitadamo A, Shi X. "A Network Ensemble of microRNA and Gene Expression in Ovarian Cancer". Poster, Presented at: Biology of Genomes: 2015 May 5-9; Cold Spring Harbor Laboratory. 
+Hall B, Quitadamo A, Shi X. ``A Network Ensemble of microRNA and Gene Expression in Ovarian Cancer''. Poster, Presented at: Biology of Genomes: 2015 May 5-9; Cold Spring Harbor Laboratory. 
 
-Quitadamo A, Tian L, Hall B, Shi X. "An Integrated Network of microRNA and Gene Expression in Ovarian Cancer". BMC Bioinformatics 2015, 16(Suppl 5):S5. doi:10.1186/1471-2105-16-S5-S5
+Quitadamo A, Tian L, Hall B, Shi X. ``An Integrated Network of microRNA and Gene Expression in Ovarian Cancer''. BMC Bioinformatics 2015, 16(Suppl 5):S5. doi:10.1186/1471-2105-16-S5-S5
 
-Tian L, Quitadamo A, Lin F, Shi X. "Methods for Population Based eQTL Analysis in Human Genetics". Tsinghua Science and Technology, 2014. 19(6): 624-634. doi:10.1109/TST.2014.6961031
+Tian L, Quitadamo A, Lin F, Shi X. ``Methods for Population Based eQTL Analysis in Human Genetics''. Tsinghua Science and Technology, 2014. 19(6): 624-634. doi:10.1109/TST.2014.6961031
 
-Quitadamo A, Tian L, Shi X. "A Network Approach for Integrative Analysis of Genomic Data in Ovarian Cancer". Poster, Presented at: Intelligent Systems for Molecular Biology: 2014 July 13-15; Boston MA.
+Quitadamo A, Tian L, Shi X. ``A Network Approach for Integrative Analysis of Genomic Data in Ovarian Cancer''. Poster, Presented at: Intelligent Systems for Molecular Biology: 2014 July 13-15; Boston MA.
 
-Quitadamo A, Lin F, Tian L, and Shi X. "A microRNA-Gene Network in Ovarian Cancer from Genome-Wide QTL Analysis". The 10th International Symposium on Bioinformatics Research and Applications (ISBRA2014), Zhangjiajie, China, June 28-30, 2014.
+Quitadamo A, Lin F, Tian L, and Shi X. ``A microRNA-Gene Network in Ovarian Cancer from Genome-Wide QTL Analysis''. The 10th International Symposium on Bioinformatics Research and Applications (ISBRA2014), Zhangjiajie, China, June 28-30, 2014.
 
-Van Note A, Quitadamo A, Piemonte A, Ramsdell J, Cocchiola A, Okamoto K, Thomas WK. “Role of DNA Methylation in Transposable Element Mobilization in {\em Caenorbabditis elegans}”. Poster, Presented at: 14th Annual Undergraduate Research Conference; 2013 Apr 12-27; Durham, NH.
+Van Note A, Quitadamo A, Piemonte A, Ramsdell J, Cocchiola A, Okamoto K, Thomas WK. ``Role of DNA Methylation in Transposable Element Mobilization in {\em Caenorbabditis elegans}''. Poster, Presented at: 14th Annual Undergraduate Research Conference; 2013 Apr 12-27; Durham, NH.
 
 \section{\sc Social Media}
 
